<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="tarrotsystem.com.playmovie.DetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/colapsebar_height"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleGravity="center_horizontal"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:background="@drawable/backdrop_placeholder"
                android:contentDescription="@string/backdrop"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:foreground="@drawable/backdrop_gradient_shape"/>


            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
                android:title=""
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/nestedscroll_top"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|right|end">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/synopsis_top_margin"
        android:layout_marginRight="@dimen/synopsis_top_margin"
        android:layout_marginLeft="@dimen/synopsis_top_margin"
        android:layout_marginStart="@dimen/synopsis_top_margin"
        android:layout_marginBottom="@dimen/synopsis_top_margin"
        app:cardBackgroundColor="@color/colorPrimary">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/lg_keyline"
            android:paddingBottom="@dimen/synopsis_top_margin"
            android:paddingLeft="@dimen/lg_keyline"
            android:paddingRight="@dimen/lg_keyline">

            <android.support.v7.widget.CardView
                android:id="@+id/movie_img"
                android:layout_width="@dimen/poster_thumbnail_width"
                android:layout_height="@dimen/poster_thumbnail_height"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="@dimen/pl_keylines"
                android:layout_marginRight="@dimen/pl_keylines"
                android:adjustViewBounds="true"
                card_view:cardCornerRadius="@dimen/card_corner">
                <ImageView
                    android:id="@+id/poster_img"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:src="@drawable/image_poster" />
            </android.support.v7.widget.CardView>

            <!--MovieTitle-->
            <pttextview.widget.PTTextView
                android:id="@+id/movie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/title"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/movie_title_text_size"
                app:typeface="pt_sans_narrow_bold"
                android:layout_alignTop="@+id/movie_img"
                android:layout_toRightOf="@+id/movie_img"
                android:layout_toEndOf="@+id/movie_img"/>

            <!-- Genre-->
            <pttextview.widget.PTTextView
                android:id="@+id/genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/genre"
                android:textColor="@color/colorLightGrey"
                android:textSize="@dimen/other_text_size"
                android:layout_marginTop="@dimen/card_corner"
                android:layout_toRightOf="@+id/movie_img"
                android:layout_toEndOf="@+id/movie_img"
                android:layout_below="@+id/movie_title"
                app:typeface="pt_sans_narrow_regular"
                />
            <LinearLayout
                android:id="@+id/dated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/genre"
                android:layout_marginTop="@dimen/releasedate_top"
                android:orientation="horizontal"
                android:layout_toRightOf="@+id/movie_img"
                android:layout_toEndOf="@+id/movie_img">
                <TextView
                    android:id="@+id/release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/release_date"
                    android:textColor="@color/colorLightGrey"
                    android:textSize="@dimen/other_text_size"
                    />
                <TextView
                    android:id="@+id/elapse_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/duration"
                    android:layout_marginLeft="@dimen/vertical_spacing"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="@dimen/other_text_size"
                    android:textStyle="bold"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dated"
                android:layout_marginTop="@dimen/vertical_spacing"
                android:orientation="horizontal"
                android:layout_toEndOf="@+id/movie_img"
                android:layout_toRightOf="@+id/movie_img">
                <TextView
                    android:id="@+id/ratings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/ratings_text"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="@dimen/other_text_size"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/overrall_ratings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ratings"
                    android:textSize="@dimen/other_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/synopsis_top_margin"
                android:layout_below="@+id/movie_img">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/md_keylines"
                    android:text="@string/text_overview"
                    android:textSize="@dimen/synopsis_text_size"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/vertical_spacing"
                    tools:text="@string/overview"
                    android:textColor="@color/colorLightGrey"
                    android:textSize="@dimen/other_text_size" />

            </LinearLayout>
        </RelativeLayout>

    </android.support.v7.widget.CardView>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>